log
Sat, May  3, 2025  5:49:11 PM: 
 treemap.c | 8 ++++++--
 1 file changed, 6 insertions(+), 2 deletions(-)
 tests:  4|7
total_score: 5/70
5729e4d
Sat, May  3, 2025  6:23:17 PM: 
 treemap.c | 37 ++++++++++++++++++++++++++++++++++++-
 1 file changed, 36 insertions(+), 1 deletion(-)
 tests:  6|6
total_score: 15/70
47587b4
Sat, May  3, 2025  6:26:39 PM: 
 treemap.c | 15 +++++++++++++++
 1 file changed, 15 insertions(+)
Compilation failed
In file included from test.c:4:0:
treemap.c: In function 'searchTreeMap':
treemap.c:113:23: error: 'NUll' undeclared (first use in this function)
     while (current != NUll)
                       ^~~~
treemap.c:113:23: note: each undeclared identifier is reported only once for each function it appears in
074e8ed
